# SpinVibe

./: LICENSE  README.md  RK.py  constants.py  coupling.py  hamiltonian.py  input.py  mainsystem.py  math.py  math_func.py  measure.py  paper.md  phonon.py  pyproject.toml  read_files.py  redfield.py  run.py  runge_kutta.py  s_hamiltonian.py  setup.py  spin_phonon.py  test.ipynb  test.py
.github/workflows/: draft-pdf.yml
docs/: CNAME  citations.bib  index.html  index.md  paper.md
docs/css/: style.css
docs/js/: main.js
docs/sections/: changelog.html  contributing.html  example.html  input.html  installation.html  license.html  output.html  overview.html  requirements.html  theory.html
spinvibe/: constants.py  coupling.py  hamiltonian.py  math_func.py  measure.py  read_files.py  redfield.py  run.py  spin_phonon.py
src/: cli.py  constants.py  coupling.py  hamiltonian.py  measure.py  read_files.py  redfield.py  run.py  spin_phonon.py
test/: Cr_otolyl_4.h5  Cr_otolyl_4_d1.h5  README.md  Sn_otolyl_4_atoms.h5  input.json  mol_mass.h5  molecule_indices.h5  phonon.h5  test.out
tools/: extract_d1.py  extract_mol_mass.py  extract_molecule.py  extract_orca.py  phonon.py  qe2h5.py
